2007-08-16  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: add String.printf and append_printf

2007-08-16  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: add signal handling API

2007-08-16  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valacodegenerator.vala, vala/valacodevisitor.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala:
	  adapt visit initializer and visit array creation to external visitor
	* vala/valamemorymanager.vala: check initializers of array creation
	  expressions for missing ref
	* vala/valaarraycreationexpression.vala, vala/valainitializerlist.vala:
	  change to external visitor

2007-08-15  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/Makefile.am: create gee-1.0 vapi; this makes it possible to
	  use the vala shipped libgee copy without an separate installed
	  version of libgee i.e. it enables to run the tests without installed
	  libgee

2007-08-14  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vala/valainterfacewriter.vala:
	generate "throws" clause when needed

2007-08-14  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valaccodecompiler.vala: do not pass non-existant 
	packages to pkg-config

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: correct KeyFile accessors,
	reported by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gdk-2.0.vala: use gdk_cursor_unref to release
	cursors, patch by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/Makefile.am: install gstreamer-0.10.vala,
	reported by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtk+-2.0.vala: Duh, it is GTK_WIDGET_SET_FLAGS,
	not gtk_widget_set_flags. Where is "svn commit --amend"?

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtk+-2.0.vala: adding Widget.set_flags.
