@@ -1,3 +1,9 @@
+2007-08-16  Raffaele Sandrini  <raffaele@sandrini.ch>
+
+	* vala/valainitializerlist.vala: add size property
+	* vala/valasemanticanalyzer.vala: allow array creation with initializer
+	  list without specifying the sizes e.g. "new t[] { a, b, c}"
+
 2007-08-16  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
 
 	* vapi/glib-2.0.vala: add String.printf and append_printf
